# opentaxkr-models

./: LICENSE  README.md  pyproject.toml
otkmodels/: __init__.py  util.py
otkmodels/accounting/: 4. 전자신고파일설명서(재무제표관련 계정과목코드)_20190214.html  __init__.py  docparser.py  표준계정과목_법인세.py
otkmodels/업종분류/: __init__.py  업종코드-표준산업분류 연계표_홈택스게시.xlsx
tests/: test_account.py  test_model.py  test_업종.py
