[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "opentaxkr-models"
authors = [{name = "Pak Youngrok", email = "youngrok@finecode.kr"}]
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: Apache Software License"]
dynamic = ["version", "description"]
dependencies = [
    "python-dateutil",
    "addresskr",
    "openpyxl"
]

[tool.setuptools]
packages = ["otkmodels"]

[tool.setuptools.dynamic]
description = {file = "README.md"}

[project.urls]
Home = "https://github.com/finecodekr/opentaxkr-models"
